# plantstore

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
fern/: fern.config.json
fern/api/: generators.yml
fern/api/definition/: api.yml  owner.yml  pet.yml  plant.yml
src/plantstore/: main.py  owner.py  plant.py
